--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
+heading: '竹杖芒鞋 乘风破浪'
+subheading: '一日不书，百事荒芜
 banner: 'default'
 ---
 
