--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,7 +11,7 @@ $theme-colors: (
 
 // Default brand colors
 $brand-colors: (
-  "orangered": #759417,
+  "orangered": #ff5100,
   "greatgold": #f2cb05,
   "greenblue": #389092,
 );
